// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatePicker Snapshot tests calender Popper 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <DatePicker
    allowSameDay={false}
    className="hig__text-field-v1__input"
    customInput={
        <TextFieldPresenter
            disabled={true}
            icon={
                <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <title>
                        calendar-24
                    </title>
                    <g
                        id="final"
                    >
                        <g
                            id="calendar"
                        >
                            <g
                                id="outline"
                            >
                                <path
                                    d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                    fill="#2e4258"
                                />
                                <path
                                    d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                    fill="none"
                                />
                                <rect
                                    fill="none"
                                    height="12"
                                    width="17"
                                    x="3"
                                    y="9"
                                />
                                <path
                                    d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                    fill="#2e4258"
                                />
                            </g>
                        </g>
                    </g>
                </svg>
            }
            id="text-field-82394"
            instructions={undefined}
            label={undefined}
            onClearButtonClick={[Function]}
            placeholder={undefined}
            readOnly={true}
            showClearButton={undefined}
            type="text"
        />
    }
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={false}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    hidePopper={false}
    id="hig__date-picker"
    instruction={undefined}
    isClearable={false}
    label={undefined}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    popperModifiers={
        Object {
            "flip": Object {
              "enabled": false,
            },
            "offset": Object {
              "enabled": true,
              "offset": "0px, 0px",
            },
            "preventOverflow": Object {
              "enabled": true,
              "escapeWithReference": false,
            },
          }
    }
    popperPlacement="bottom-start"
    preventOpenOnFocus={false}
    readOnly={true}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showIcon={true}
    showInstruction={false}
    showLabel={true}
    showMonthDropdown={false}
    showMonthYearDropdown={false}
    showTimeSelect={false}
    showYearDropdown={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
  "nodes": Array [
    <DatePicker
      allowSameDay={false}
      className="hig__text-field-v1__input"
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  icon={
                        <svg
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                        >
                              <title>
                                    calendar-24
                              </title>
                              <g
                                    id="final"
                              >
                                    <g
                                          id="calendar"
                                    >
                                          <g
                                                id="outline"
                                          >
                                                <path
                                                      d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                                      fill="#2e4258"
                                                />
                                                <path
                                                      d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                                      fill="none"
                                                />
                                                <rect
                                                      fill="none"
                                                      height="12"
                                                      width="17"
                                                      x="3"
                                                      y="9"
                                                />
                                                <path
                                                      d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                                      fill="#2e4258"
                                                />
                                          </g>
                                    </g>
                              </g>
                        </svg>
                  }
                  id="text-field-82394"
                  instructions={undefined}
                  label={undefined}
                  onClearButtonClick={[Function]}
                  placeholder={undefined}
                  readOnly={true}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      hidePopper={false}
      id="hig__date-picker"
      instruction={undefined}
      isClearable={false}
      label={undefined}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, 0px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      disabled={false}
      fixedHeight={true}
      hidePopper={false}
      instruction={undefined}
      label={undefined}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "context": Object {},
      "props": Object {
        "disabled": false,
        "fixedHeight": true,
        "hidePopper": false,
        "instruction": undefined,
        "label": undefined,
        "selected": "2017-09-15T13:30:00.000Z",
        "shouldCloseOnSelect": true,
        "showIcon": true,
        "showInstruction": false,
        "showLabel": true,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <DatePicker
      allowSameDay={false}
      className="hig__text-field-v1__input"
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  icon={
                        <svg
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                        >
                              <title>
                                    calendar-24
                              </title>
                              <g
                                    id="final"
                              >
                                    <g
                                          id="calendar"
                                    >
                                          <g
                                                id="outline"
                                          >
                                                <path
                                                      d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                                      fill="#2e4258"
                                                />
                                                <path
                                                      d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                                      fill="none"
                                                />
                                                <rect
                                                      fill="none"
                                                      height="12"
                                                      width="17"
                                                      x="3"
                                                      y="9"
                                                />
                                                <path
                                                      d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                                      fill="#2e4258"
                                                />
                                          </g>
                                    </g>
                              </g>
                        </svg>
                  }
                  id="text-field-82394"
                  instructions={undefined}
                  label={undefined}
                  onClearButtonClick={[Function]}
                  placeholder={undefined}
                  readOnly={true}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      hidePopper={false}
      id="hig__date-picker"
      instruction={undefined}
      isClearable={false}
      label={undefined}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, 0px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    disabled={false}
    fixedHeight={true}
    hidePopper={false}
    instruction={undefined}
    label={undefined}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showIcon={true}
    showInstruction={false}
    showLabel={true}
/>,
}
`;

exports[`DatePicker Snapshot tests disabled view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <DatePicker
    allowSameDay={false}
    className="hig__text-field-v1__input"
    customInput={
        <TextFieldPresenter
            disabled={true}
            icon={
                <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <title>
                        calendar-24
                    </title>
                    <g
                        id="final"
                    >
                        <g
                            id="calendar"
                        >
                            <g
                                id="outline"
                            >
                                <path
                                    d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                    fill="#2e4258"
                                />
                                <path
                                    d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                    fill="none"
                                />
                                <rect
                                    fill="none"
                                    height="12"
                                    width="17"
                                    x="3"
                                    y="9"
                                />
                                <path
                                    d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                    fill="#2e4258"
                                />
                            </g>
                        </g>
                    </g>
                </svg>
            }
            id="text-field-82394"
            instructions={undefined}
            label={undefined}
            onClearButtonClick={[Function]}
            placeholder={undefined}
            readOnly={true}
            showClearButton={undefined}
            type="text"
        />
    }
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={true}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    id="hig__date-picker"
    instruction={undefined}
    isClearable={false}
    label={undefined}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    popperModifiers={
        Object {
            "flip": Object {
              "enabled": false,
            },
            "offset": Object {
              "enabled": true,
              "offset": "0px, 0px",
            },
            "preventOverflow": Object {
              "enabled": true,
              "escapeWithReference": false,
            },
          }
    }
    popperPlacement="bottom-start"
    preventOpenOnFocus={false}
    readOnly={true}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showIcon={true}
    showInstruction={false}
    showLabel={true}
    showMonthDropdown={false}
    showMonthYearDropdown={false}
    showTimeSelect={false}
    showYearDropdown={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
  "nodes": Array [
    <DatePicker
      allowSameDay={false}
      className="hig__text-field-v1__input"
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  icon={
                        <svg
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                        >
                              <title>
                                    calendar-24
                              </title>
                              <g
                                    id="final"
                              >
                                    <g
                                          id="calendar"
                                    >
                                          <g
                                                id="outline"
                                          >
                                                <path
                                                      d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                                      fill="#2e4258"
                                                />
                                                <path
                                                      d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                                      fill="none"
                                                />
                                                <rect
                                                      fill="none"
                                                      height="12"
                                                      width="17"
                                                      x="3"
                                                      y="9"
                                                />
                                                <path
                                                      d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                                      fill="#2e4258"
                                                />
                                          </g>
                                    </g>
                              </g>
                        </svg>
                  }
                  id="text-field-82394"
                  instructions={undefined}
                  label={undefined}
                  onClearButtonClick={[Function]}
                  placeholder={undefined}
                  readOnly={true}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={true}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      id="hig__date-picker"
      instruction={undefined}
      isClearable={false}
      label={undefined}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, 0px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      disabled={true}
      fixedHeight={true}
      instruction={undefined}
      label={undefined}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "context": Object {},
      "props": Object {
        "disabled": true,
        "fixedHeight": true,
        "instruction": undefined,
        "label": undefined,
        "selected": "2017-09-15T13:30:00.000Z",
        "shouldCloseOnSelect": true,
        "showIcon": true,
        "showInstruction": false,
        "showLabel": true,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <DatePicker
      allowSameDay={false}
      className="hig__text-field-v1__input"
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  icon={
                        <svg
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                        >
                              <title>
                                    calendar-24
                              </title>
                              <g
                                    id="final"
                              >
                                    <g
                                          id="calendar"
                                    >
                                          <g
                                                id="outline"
                                          >
                                                <path
                                                      d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                                      fill="#2e4258"
                                                />
                                                <path
                                                      d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                                      fill="none"
                                                />
                                                <rect
                                                      fill="none"
                                                      height="12"
                                                      width="17"
                                                      x="3"
                                                      y="9"
                                                />
                                                <path
                                                      d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                                      fill="#2e4258"
                                                />
                                          </g>
                                    </g>
                              </g>
                        </svg>
                  }
                  id="text-field-82394"
                  instructions={undefined}
                  label={undefined}
                  onClearButtonClick={[Function]}
                  placeholder={undefined}
                  readOnly={true}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={true}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      id="hig__date-picker"
      instruction={undefined}
      isClearable={false}
      label={undefined}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, 0px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    disabled={true}
    fixedHeight={true}
    instruction={undefined}
    label={undefined}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showIcon={true}
    showInstruction={false}
    showLabel={true}
/>,
}
`;

exports[`DatePicker Snapshot tests regular view 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <DatePicker
    allowSameDay={false}
    className="hig__text-field-v1__input"
    customInput={
        <TextFieldPresenter
            disabled={true}
            icon={
                <svg
                    height="24"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                >
                    <title>
                        calendar-24
                    </title>
                    <g
                        id="final"
                    >
                        <g
                            id="calendar"
                        >
                            <g
                                id="outline"
                            >
                                <path
                                    d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                    fill="#2e4258"
                                />
                                <path
                                    d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                    fill="none"
                                />
                                <rect
                                    fill="none"
                                    height="12"
                                    width="17"
                                    x="3"
                                    y="9"
                                />
                                <path
                                    d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                    fill="#2e4258"
                                />
                            </g>
                        </g>
                    </g>
                </svg>
            }
            id="text-field-82394"
            instructions={undefined}
            label={undefined}
            onClearButtonClick={[Function]}
            placeholder={undefined}
            readOnly={true}
            showClearButton={undefined}
            type="text"
        />
    }
    dateFormat="L"
    dateFormatCalendar="MMMM YYYY"
    disabled={false}
    disabledKeyboardNavigation={false}
    dropdownMode="scroll"
    fixedHeight={true}
    id="hig__date-picker"
    instruction={undefined}
    isClearable={false}
    label={undefined}
    monthsShown={1}
    onBlur={[Function]}
    onChange={[Function]}
    onClickOutside={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMonthChange={[Function]}
    onSelect={[Function]}
    onYearChange={[Function]}
    popperModifiers={
        Object {
            "flip": Object {
              "enabled": false,
            },
            "offset": Object {
              "enabled": true,
              "offset": "0px, 0px",
            },
            "preventOverflow": Object {
              "enabled": true,
              "escapeWithReference": false,
            },
          }
    }
    popperPlacement="bottom-start"
    preventOpenOnFocus={false}
    readOnly={true}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showIcon={true}
    showInstruction={false}
    showLabel={true}
    showMonthDropdown={false}
    showMonthYearDropdown={false}
    showTimeSelect={false}
    showYearDropdown={false}
    timeCaption="Time"
    timeIntervals={30}
    withPortal={false}
/>,
  "nodes": Array [
    <DatePicker
      allowSameDay={false}
      className="hig__text-field-v1__input"
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  icon={
                        <svg
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                        >
                              <title>
                                    calendar-24
                              </title>
                              <g
                                    id="final"
                              >
                                    <g
                                          id="calendar"
                                    >
                                          <g
                                                id="outline"
                                          >
                                                <path
                                                      d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                                      fill="#2e4258"
                                                />
                                                <path
                                                      d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                                      fill="none"
                                                />
                                                <rect
                                                      fill="none"
                                                      height="12"
                                                      width="17"
                                                      x="3"
                                                      y="9"
                                                />
                                                <path
                                                      d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                                      fill="#2e4258"
                                                />
                                          </g>
                                    </g>
                              </g>
                        </svg>
                  }
                  id="text-field-82394"
                  instructions={undefined}
                  label={undefined}
                  onClearButtonClick={[Function]}
                  placeholder={undefined}
                  readOnly={true}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      id="hig__date-picker"
      instruction={undefined}
      isClearable={false}
      label={undefined}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, 0px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_context": Object {},
    "_element": <DatePicker
      disabled={false}
      fixedHeight={true}
      instruction={undefined}
      label={undefined}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
/>,
    "_forcedUpdate": false,
    "_instance": DatePicker {
      "context": Object {},
      "props": Object {
        "disabled": false,
        "fixedHeight": true,
        "instruction": undefined,
        "label": undefined,
        "selected": "2017-09-15T13:30:00.000Z",
        "shouldCloseOnSelect": true,
        "showIcon": true,
        "showInstruction": false,
        "showLabel": true,
      },
      "refs": Object {},
      "state": null,
      "updater": Updater {
        "_callbacks": Array [],
        "_renderer": [Circular],
      },
    },
    "_newState": null,
    "_rendered": <DatePicker
      allowSameDay={false}
      className="hig__text-field-v1__input"
      customInput={
            <TextFieldPresenter
                  disabled={true}
                  icon={
                        <svg
                              height="24"
                              viewBox="0 0 24 24"
                              width="24"
                              xmlns="http://www.w3.org/2000/svg"
                        >
                              <title>
                                    calendar-24
                              </title>
                              <g
                                    id="final"
                              >
                                    <g
                                          id="calendar"
                                    >
                                          <g
                                                id="outline"
                                          >
                                                <path
                                                      d="M15,10.08H14V12H9V10.08H8V12H4.23v1H8v3H4.23v1H8v2H9V17h5v2h1V17h4V16H15V13h4V12H15ZM14,16H9V13h5Z"
                                                      fill="#2e4258"
                                                />
                                                <path
                                                      d="M18,6a1,1,0,0,1-1,1H16a1,1,0,0,1-1-1V5H8V6A1,1,0,0,1,7,7H6A1,1,0,0,1,5,6V5H3V8H20V5H18Z"
                                                      fill="none"
                                                />
                                                <rect
                                                      fill="none"
                                                      height="12"
                                                      width="17"
                                                      x="3"
                                                      y="9"
                                                />
                                                <path
                                                      d="M20,4H18V3a1,1,0,0,0-1-1H16a1,1,0,0,0-1,1V4H8V3A1,1,0,0,0,7,2H6A1,1,0,0,0,5,3V4H3A1,1,0,0,0,2,5V21a1,1,0,0,0,1,1H20a1,1,0,0,0,1-1V5A1,1,0,0,0,20,4ZM16,3h1V6H16ZM6,3H7V6H6ZM20,21H3V9H20ZM20,8H3V5H5V6A1,1,0,0,0,6,7H7A1,1,0,0,0,8,6V5h7V6a1,1,0,0,0,1,1h1a1,1,0,0,0,1-1V5h2Z"
                                                      fill="#2e4258"
                                                />
                                          </g>
                                    </g>
                              </g>
                        </svg>
                  }
                  id="text-field-82394"
                  instructions={undefined}
                  label={undefined}
                  onClearButtonClick={[Function]}
                  placeholder={undefined}
                  readOnly={true}
                  showClearButton={undefined}
                  type="text"
            />
      }
      dateFormat="L"
      dateFormatCalendar="MMMM YYYY"
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="scroll"
      fixedHeight={true}
      id="hig__date-picker"
      instruction={undefined}
      isClearable={false}
      label={undefined}
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      onYearChange={[Function]}
      popperModifiers={
            Object {
                  "flip": Object {
                    "enabled": false,
                  },
                  "offset": Object {
                    "enabled": true,
                    "offset": "0px, 0px",
                  },
                  "preventOverflow": Object {
                    "enabled": true,
                    "escapeWithReference": false,
                  },
                }
      }
      popperPlacement="bottom-start"
      preventOpenOnFocus={false}
      readOnly={true}
      selected={"2017-09-15T13:30:00.000Z"}
      shouldCloseOnSelect={true}
      showIcon={true}
      showInstruction={false}
      showLabel={true}
      showMonthDropdown={false}
      showMonthYearDropdown={false}
      showTimeSelect={false}
      showYearDropdown={false}
      timeCaption="Time"
      timeIntervals={30}
      withPortal={false}
/>,
    "_rendering": false,
    "_updater": Updater {
      "_callbacks": Array [],
      "_renderer": [Circular],
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <DatePicker
    disabled={false}
    fixedHeight={true}
    instruction={undefined}
    label={undefined}
    selected={"2017-09-15T13:30:00.000Z"}
    shouldCloseOnSelect={true}
    showIcon={true}
    showInstruction={false}
    showLabel={true}
/>,
}
`;
